2007-09-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-page.c: supported 0.6.0. Bug 1790607.

2007-07-27  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler.h, src/rbpoppler-page.c: worked with poppler <
	0.5.9 again.

	* src/rbpoppler-document.c: used POPPLER_CHECK_VERSION(0, 5, 9)
	instead of HAVE_POPPLER_FONT_INFO because my patch is accepted by
	upstream.

	* src/rbpoppler.c, src/rbpoppler-page.c: don't show
	poppler_form_field_get_field_type().

	* src/lib/poppler.rb, src/rbpoppler.h, src/rbpoppler-page.c:
	followed the recent poppler form API changes but not tested
	because I don't have a PDF with form...

2007-07-13  Guillaume Cottenceau

	* src/rbpoppler-document.c, src/rbpoppler-page.c: replace RTEST
	uses by RVAL2CBOOL

2007-07-13  Guillaume Cottenceau

	* src/rbpoppler-document.c: "? Qtrue : QFalse" => CBOOL2RVAL
	cleanup

2007-06-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler.h, src/rbpoppler-page.c: followed new functions
	and types in poppler-page.h. But this is not enough. We need more
	works.

	* src/rbpoppler-document.c, src/lib/poppler.rb: supported
	Poppler::Document.new(pdf_data).

	* src/rbpoppler.h (SELSTYLE2RVAL, RVAL2SELSTYLE): added.

	* src/rbpoppler-page.c: followed API changes of
	poppler_page_render_selection() family at 0.5.9.

	* src/rbpoppler.c: added enum types appeared at 0.5.9.

	* src/rbpoppler-action.c, src/rbpoppler-document.c: removed
	needless variables.

2007-04-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-document.c (Poppler::Document#size): added a
	convenient alias of Poppler::Document#n_pages.

	* src/rbpoppler-document.c (doc_initialize): accepted not only URI
	but also file name.

	* src/lib/poppler.rb (Poppler::Document#ensure_uri): added.

2007-03-29  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbpoppler-document.c: added a convenient alias:
	Poppler::Document#pages.

	* sample/pdf2text.rb: used default value.

	* src/rbpoppler-page.c (page_get_text): used page size rectangle
	as default value.