@@ -4,7 +4,7 @@
   rbpoppler-attachment.c -
 
   $Author: ktou $
-  $Date: 2006/05/17 12:51:19 $
+  $Date: 2007/10/13 05:48:57 $
 
   Copyright (C) 2006 Ruby-GNOME2 Project Team
 
@@ -69,6 +69,14 @@ attachment_get_description(VALUE self)
     return CSTR2RVAL(SELF(self)->description);
 }
 
+#if POPPLER_CHECK_VERSION(0, 6, 0)
+static VALUE
+attachment_get_size(VALUE self)
+{
+    return INT2NUM(SELF(self)->size);
+}
+#endif
+
 static VALUE
 attachment_get_mtime(VALUE self)
 {
@@ -80,6 +88,16 @@ attachment_get_ctime(VALUE self)
 {
     return rb_time_new(SELF(self)->ctime, 0);
 }
+
+#if POPPLER_CHECK_VERSION(0, 6, 0)
+static VALUE
+attachment_get_checksum(VALUE self)
+{
+    GString *checksum;
+    checksum = SELF(self)->checksum;
+    return rb_str_new(checksum->str, checksum->len);
+}
+#endif
 
 void
 Init_poppler_attachment(VALUE mPoppler)
@@ -93,8 +111,10 @@ Init_poppler_attachment(VALUE mPoppler)
     rb_define_method(cAttachment, "save", attachment_save, -1);
     rb_define_method(cAttachment, "name", attachment_get_name, 0);
     rb_define_method(cAttachment, "description", attachment_get_description, 0);
+    rb_define_method(cAttachment, "size", attachment_get_size, 0);
     rb_define_method(cAttachment, "mtime", attachment_get_mtime, 0);
     rb_define_method(cAttachment, "ctime", attachment_get_ctime, 0);
+    rb_define_method(cAttachment, "checksum", attachment_get_checksum, 0);
 
     G_DEF_SETTERS(cAttachment);
 }
