@@ -1,3 +1,7 @@
+2007-10-13  Kouhei Sutou  <kou@cozmixng.org>
+
+	* src/rbpoppler-attachment.c: supported 0.6.0.
+
 2007-09-09  Kouhei Sutou  <kou@cozmixng.org>
 
 	* src/rbpoppler-page.c: supported 0.6.0. Bug 1790607.
